--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,17 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+import java.util.Scanner;
+class Main{
+    public static void main(String[] args) {
+        Scanner girdi=new Scanner(System.in);
+        double ortalama;
+        System.out.println("lütfen bir sayı giriniz");
+        int sayi=girdi.nextInt();
+        System.out.println("lütfen bir sayı giriniz");
+        int sayi2=girdi.nextInt();
+        System.out.println("lütfen bir sayı giriniz");
+        int sayi3= girdi.nextInt();
+        ortalama=(double)(sayi+sayi2+sayi3)/3.0;
+        System.out.println("ortalama" + ortalama);
+        System.out.printf( "ortalama %.2f",ortalama); //virgülden sonraki kısmın 2 basamaklı olmasını sağlar
+      }
+    }
+}
